add-search-service